--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@google/maps": "^1.0.2",
     "config": "^3.2.4",
     "google": "^2.1.0",
+    "load-google-maps-api": "^2.0.1",
     "papaparse": "^5.1.0"
   },
   "devDependencies": {},
